--- a/identiconizer/build.gradle
+++ b/identiconizer/build.gradle
@@ -1,12 +1,15 @@
-apply plugin: 'com.android.application'
+plugins {
+    id 'com.android.application'
+}
 
 android {
-    compileSdkVersion 27
+    namespace "com.germainz.identiconizer"
+    compileSdk 34
 
     defaultConfig {
         applicationId "com.germainz.identiconizer"
-        minSdkVersion 14
-        targetSdkVersion 27
+        minSdk 14
+        targetSdk 34
         versionCode 11
         versionName "1.4"
         vectorDrawables.useSupportLibrary = true
@@ -15,17 +18,22 @@ android {
     buildTypes {
         release {
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.txt'
         }
+    }
+    
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
 }
 
 dependencies {
-    implementation 'com.android.support:appcompat-v7:27.1.1'
-    implementation 'com.android.support:design:27.1.1'
-    implementation 'com.android.support:support-v4:27.1.1'
-    implementation 'com.android.support:recyclerview-v7:27.1.1'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'com.google.android.material:material:1.11.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.recyclerview:recyclerview:1.3.2'
     implementation 'com.larswerkman:HoloColorPicker:1.5'
-    implementation 'com.android.support:support-vector-drawable:27.1.1'
+    implementation 'androidx.vectordrawable:vectordrawable:1.1.0'
     compileOnly 'de.robv.android.xposed:api:82'
 }
