--- a/build.gradle
+++ b/build.gradle
@@ -5,13 +5,14 @@ buildscript {
         google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:8.3.0'
+        classpath 'com.android.tools.build:gradle:8.11.1'
     }
 }
 
 allprojects {
     repositories {
-        mavenCentral()
         google()
+        mavenCentral()
+        maven { url 'https://jitpack.io' }
     }
 }
