--- a/identiconizer/build.gradle
+++ b/identiconizer/build.gradle
@@ -35,5 +35,5 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.3.2'
     implementation 'com.larswerkman:HoloColorPicker:1.5'
     implementation 'androidx.vectordrawable:vectordrawable:1.1.0'
-    compileOnly 'de.robv.android.xposed:api:82'
+    // Xposed-Abhängigkeit wurde entfernt
 }
